--- a/templates/user/add.user.html
+++ b/templates/user/add.user.html
@@ -92,7 +92,7 @@
                                 <div ng-if="newUser.role" class="description">
                                     <p>
                                         <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
-                                        {{newUser.role.name}}
+                                        {{newUser.role_display}}
                                     </p>
                                 </div>
                             </div>
@@ -267,7 +267,7 @@
                             <div class="col-xs-12 col-sm-8">
                                 <div class="row">
                                     <div class="col-xs-12 col-sm-6">
-                                        <select ng-model="newUser.role" ng-change="roleUpdate()" ng-options="role as role.name for role in roles" class="form-control">
+                                        <select ng-model="newUser.role" ng-change="roleUpdate()" ng-options="role as role.name_display for role in roles" class="form-control">
                                             <option ng-hide="newUser.role" value="">{{'USERS.ADD.SELECT_ROLE'|translate}}</option>
                                         </select>
                                     </div>
