--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -184,7 +184,7 @@
 -->
 
 						<!-- SECTION: Legacy Questionnaire -->
-						<div class="col-xs-12 col-sm-6">
+<!--						<div class="col-xs-12 col-sm-6">
 							<div class="panel-container animated" ng-class="{pulse: hoverLegacyQuestionnaireMenu}" ng-mouseenter="hoverLegacyQuestionnaireMenu=true" ng-mouseleave="hoverLegacyQuestionnaireMenu=false" style="cursor:pointer;" ng-click="goToLegacyQuestionnaire()">
 								<div class="panel-info" >
 									<div class="panel-content">
@@ -200,7 +200,7 @@
 									</div>
 								</div>
 							</div>
-						</div>
+						</div>-->
 
 					</div>
 				</div>
