--- a/templates/navbar-menu.html
+++ b/templates/navbar-menu.html
@@ -67,12 +67,12 @@
                             {{'NAVIGATION_MENU.EMAIL'|translate}}
                         </a>
                     </li>-->
-                    <li ui-sref-active="active">
+<!--                    <li ui-sref-active="active">
                         <a ui-sref="legacy-questionnaire" ng-click="closeNav()">
                             <span class="fa fa-pencil-square" aria-hidden="true"></span>
                             {{'NAVIGATION_MENU.LEGACY_QUESTIONNAIRE'|translate}}
                         </a>
-                    </li>
+                    </li>-->
                 </ul>
             </li>
             <li class="dropdown" ng-class="{active: currentActiveAdministration()}" ng-if="isAuthorized([userRoles.admin, userRoles.registrant])">
