--- a/templates/side-panel-menu.html
+++ b/templates/side-panel-menu.html
@@ -156,7 +156,7 @@
 -->
 
             <!-- SECTION: Legacy Questionnaire -->
-            <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">
+<!--            <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">
                 <div class="panel-container animated"
                      ng-class="{pulse: hoverLegacyQuestionnaireMenu, active: currentPage == 'legacy-questionnaire'}"
                      ng-mouseenter="hoverLegacyQuestionnaireMenu=true"
@@ -170,7 +170,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>-->
 
         </div>
 
