--- a/templates/publication/edit.publication.html
+++ b/templates/publication/edit.publication.html
@@ -9,7 +9,7 @@
     <div class="modal-buttons col-xs-12 col-md-6">
         <span>
             <form method="post" ng-submit="updatePublishedQuestionnaire()">
-                <input class="btn btn-primary submit" ng-class="{'disabled': (!formReady || !frequencyChanged) && (!changesDetected) || !demoTrigger.age.valid}" type="submit" value="{{'PUBLICATION.EDIT.SAVE'|translate}}">
+                <input class="btn btn-primary submit" ng-class="{'disabled': (!formReady || !changesDetected)}" type="submit" value="{{'PUBLICATION.EDIT.SAVE'|translate}}">
                 <input ng-click="cancel()" class="btn btn-danger cancel" type="button" value="{{'PUBLICATION.EDIT.CANCEL'|translate}}">
             </form>
         </span>
