--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -162,7 +162,7 @@
 							</div>
 						</div>
 
-						<!-- SECTION: Questionnaires -->
+						<!-- SECTION: Publication tools -->
 						<div class="col-xs-12 col-sm-6">
 							<div class="panel-container animated" ng-class="{pulse: hoverPublicationMenu}" ng-mouseenter="hoverPublicationMenu=true" ng-mouseleave="hoverPublicationMenu=false" style="cursor:pointer;" ng-click="goToPublication()">
 								<div class="panel-info" >
@@ -227,6 +227,25 @@
 										</div>
 										<div class="panel-description">
 											<p>{{'NAVIGATION_MENU.DIAGNOSIS_TRANSLATION_SUB'|translate}}</p>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+
+                        <!-- SECTION: Custom codes control -->
+						<div class="col-xs-12 col-sm-6" ng-if="isAuthorized([userRoles.admin])">
+							<div class="panel-container animated" ng-class="{pulse: hoverDiagnosisMenu}" ng-mouseenter="hoverDiagnosisMenu=true" ng-mouseleave="hoverDiagnosisMenu=false" style="cursor:pointer;" ng-click="goToCustomCodes()">
+								<div class="panel-info" >
+									<div class="panel-content">
+										<div class="icon-home clearfix">
+											<span class="fa fa-exchange fa-sm" aria-hidden="true"></span>
+										</div>
+										<div class="panel-title">
+											<h1>{{'NAVIGATION_MENU.CUSTOM_CODES'|translate}}</h1>
+										</div>
+										<div class="panel-description">
+											<p>{{'NAVIGATION_MENU.CUSTOM_CODES_SUB'|translate}}</p>
 										</div>
 									</div>
 								</div>
