--- a/templates/study/edit.study.html
+++ b/templates/study/edit.study.html
@@ -15,24 +15,66 @@
 </div>
 <div class="modal-body">
     <uib-accordion close-others="false">
-        <!-- SECTION: Titles -->
-        <div uib-accordion-group is-open="titleSection.open">
+        <!-- SECTION: Code -->
+        <div uib-accordion-group is-open="codeSection.open">
             <uib-accordion-heading>
                 <div>
-                    <strong>{{'STUDY.EDIT.DETAILS'|translate}}</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': titleSection.open, 'glyphicon-chevron-right': !titleSection.open}"></i>
+                    <strong>{{'STUDY.EDIT.DETAILS'|translate}}</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': codeSection.open, 'glyphicon-chevron-right': !codeSection.open}"></i>
                 </div>
             </uib-accordion-heading>
             <div class="row">
                 <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
                     <div class="input-group">
                         <span class="input-group-addon">{{'STUDY.EDIT.STUDY_ID'|translate}}</span>
-                        <input ng-disabled="locked" class="form-control" type="text" ng-model="toSubmit.details.code" ng-change="detailsUpdate()" required="required" />
+                        <input ng-disabled="locked" class="form-control" type="text" ng-model="toSubmit.details.code" required="required" />
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- SECTION: Titles -->
+        <div uib-accordion-group is-open="titleSection.open">
+            <uib-accordion-heading>
+                <div>
+                    <strong>{{'STUDY.EDIT.TITLES'|translate}} </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': titleSection.open, 'glyphicon-chevron-right': !titleSection.open}"></i>
+                </div>
+            </uib-accordion-heading>
+            <div class="row">
+                <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
+                    <div class="input-group">
+                        <span class="input-group-addon">{{'STUDY.EDIT.ENGLISH_ABVR'|translate}}</span>
+                        <textarea class="form-control" rows="1" ng-model="toSubmit.title_desc.title_EN" placeholder="{{'STUDY.EDIT.PLACEHOLDER_ENGLISH_TITLE'|translate}}"></textarea>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
                     <div class="input-group">
-                        <span class="input-group-addon">{{'STUDY.EDIT.TITLE_2'|translate}}</span>
-                        <input ng-disabled="locked" class="form-control" type="text" ng-model="toSubmit.details.title" ng-change="detailsUpdate()" required="required" />
+                        <span class="input-group-addon">{{'STUDY.EDIT.FRENCH_ABVR'|translate}}</span>
+                        <textarea class="form-control" rows="1" ng-model="toSubmit.title_desc.title_FR" placeholder="{{'STUDY.EDIT.PLACEHOLDER_FRENCH_TITLE'|translate}}"></textarea>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- SECTION: Description -->
+        <div uib-accordion-group is-open="descriptionSection.open">
+            <uib-accordion-heading>
+                <div>
+                    <strong>Descriptions</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': descriptionSection.open, 'glyphicon-chevron-right': !descriptionSection.open}"></i>
+                </div>
+            </uib-accordion-heading>
+            <div class="row"">
+                <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
+                    <div style="text-align:center; margin-bottom: 10px;">
+                        <span style="font-size:20px;">{{'STUDY.EDIT.HTML_ENGLISH'|translate}}</span>
+                    </div>
+                    <div class="input-group">
+                        <div text-angular ng-model="toSubmit.title_desc.description_EN" placeholder="{{'STUDY.EDIT.PLACEHOLDER_ENGLISH_DESCRIPTION'|translate}}" required="required" ta-toolbar="toolbar"></div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
+                    <div style="text-align:center; margin-bottom: 10px;">
+                        <span style="font-size:20px;">{{'STUDY.EDIT.HTML_FRENCH'|translate}}</span>
+                    </div>
+                    <div class="input-group">
+                        <div text-angular ng-model="toSubmit.title_desc.description_FR" placeholder="{{'STUDY.EDIT.PLACEHOLDER_FRENCH_DESCRIPTION'|translate}}" required="required" ta-toolbar="toolbar" ></div>
                     </div>
                 </div>
             </div>
@@ -48,7 +90,7 @@
                 <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
                     <div class="input-group">
                         <span class="input-group-addon">{{'STUDY.EDIT.NAME'|translate}}</span>
-                        <input class="form-control" type="text" ng-model="toSubmit.investigator.name" ng-change="nameUpdate()" required="required" />
+                        <input class="form-control" type="text" ng-model="toSubmit.investigator.name" required="required" />
                     </div>
                 </div>
             </div>
@@ -91,6 +133,38 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+        <!-- SECTION: Patients list -->
+        <div uib-accordion-group is-open="patienSection.open">
+            <uib-accordion-heading>
+                <div>
+                    <strong>{{'STUDY.EDIT.PATIENTS'|translate}} </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': patienSection.open, 'glyphicon-chevron-right': !patienSection.open}"></i>
+                </div>
+            </uib-accordion-heading>
+            <div class="alert alert-info" role="alert">
+                <strong>{{'STUDY.EDIT.CURRENT_PATIENTS'|translate}}</strong><br>
+                <p>
+                    <span class="fa fa-angle-double-right" style="padding-right: 7px;" ng-if="!(patientsList|filter:{added:true}).length || selectAll.study.all"></span>
+                    <span ng-if="!(patientsList|filter:{added:true}).length">{{'STUDY.EDIT.NO_PATIENT'|translate}}</span>
+                <ul class="list-items" ng-if="(patientsList|filter:{added:true}).length">
+                    <li ng-repeat="study in patientsList | filter: {added: true} : 1">{{study.name}}</li>
+                </ul>
+                </p>
+            </div>
+            <div>
+                <div class="input-group">
+                    <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
+                    <input class="form-control" maxlength="100" type="text" ng-model="patientSearchField" placeholder="{{'STUDY.EDIT.SEARCH'|translate}}" />
+                </div>
+
+                <ul class="list-items" ng-show="!selectAll.study.checked || !selectAll.study.all">
+                    <li ng-repeat="study in patientsList | filter: patientSearchField">
+                        <label>
+                            <input ng-disabled="selectAll.study.checked && selectAll.study.all" type="checkbox" ng-model="study.added" ng-click="selectTrigger(study, selectAll.study, triggerSection.study)"> {{study.name}}
+                        </label>
+                    </li>
+                </ul>
             </div>
         </div>
     </uib-accordion>
